--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ h1 {
     }
 a { /* change the appearance of ALL links */
         text-decoration: none;
-        color: black;
+        color: rgb(255, 255, 255);
         text-align: center;
     }
 .project p { /* change the appearance of paragraph tags inside .project divs */
