--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,11 @@ h1 {
     text-align: center;
 } 
 
+h2 {
+    color: #ffffff;
+    text-align: center;
+}
+
 .projects { 
     display:flex; 
     flex-wrap:wrap; 
